# probgraph

./: .gitignore  .gitmodules  README.md  launch.sh  pyproject.toml  setup.py
model/model1/: model1.py
notebooks/cifar/: cifar10_patched.ipynb  cifar10_patched.py  cifar10_patched_gui.ipynb  cifar10_patched_interpolants.ipynb  cifar10_patched_interpolants.py  cifar10dog_patched.ipynb  cifar10dog_patched.py  cifar10lsun_patched_interpolants.ipynb  cifar10lsun_patched_interpolants.py  cifar10lsun_patched_interpolants_epsilon.ipynb  cifar10lsun_patched_interpolants_epsilon.py
notebooks/comparisons/: comparisons_after_training.ipynb  comparisons_after_training.py
notebooks/notebooks/: checker-mirror.ipynb  checker-mirror.py  checker-with-denoiser.ipynb  checker-with-denoiser.py  checker-with-score-non-gaussian-base.ipynb  checker-with-score-non-gaussian-base.py  checker-with-score.ipynb  checker-with-score.py  gmm.ipynb
refs/former/former_code/stochastic_interpolants/interflow/: fabrics.py
refs/former/former_code/stochastic_interpolants/interflow/.ipynb_checkpoints/: stochastic_interpolant-checkpoint.py
refs/poster/: conference_poster_4.aux  conference_poster_4.tex  main.tex  references.bib
refs/report/: ideas.md  report.out  report.tex
refs/reportdog/: ideas.md  report.aux  report.tex
refs/texsources/stochasticdatadependent/: icml2024_cameraready.bbl  icml2024_cameraready.bib  icml2024_cameraready.tex
refs/texsources/stochasticdatadependent/preamble/: acronyms.tex  math_commands.tex  other_commands.tex  packages.tex
