[project]
name = "probgraph"
version = "0.1.0"
description = "Probabilistic Graphical Models for MVA course"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "accelerate>=1.11.0",
    "hydra-core>=1.3.2",
    "jupyter>=1.1.1",
    "lightning>=2.5.5",
    "matplotlib>=3.9.3",
    "numba>=0.61.0",
    "numpy>=2.1.3",
    "pandas>=2.3.3",
    "pot>=0.9.6.post1",
    "pytest>=8.3.5",
    "ruff>=0.8.2",
    "scipy>=1.16.2",
    "tach>=0.16.3",
    "tensorflow>=2.14.0",
    "torch>=2.9.0",
    "torchdiffeq>=0.2.5",
]




[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {stochasticinterpolants = "refs/former_code/stochastic_interpolants", dsbm = "refs/former_code/dsbm"} # you can write inside the brackets something like "Model1" = "models/model1/", "Model2" = "models/model2/"
packages = ["stochasticinterpolants", "dsbm"] # same, smth like ["Model1", "Model2"]



[tool.setuptools.package-data]
"*" = ["*.py", "*.pyi", "*.c", "*.h", "*.cpp", "*.hpp"]
